[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/IHateComicSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://States/Menu/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[node name="Menu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.211765, 0.768627, 0.827451, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 319.0
margin_top = 138.0
margin_right = 960.0
margin_bottom = 581.0
custom_constants/separation = 100

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 641.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 1 )
text = "Flappy Godot"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 249.0
margin_right = 641.0
margin_bottom = 443.0
custom_constants/separation = 32

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 641.0
margin_bottom = 81.0
text = "Start Game"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 641.0
margin_bottom = 194.0
text = "Exit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
